--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -69,30 +69,16 @@ body.akselgresvig
             min-height: 5em
         @media only screen and (min-width: 1140px)
             min-height: 5.5em
-        position: relative
         .logo-box
-            position: absolute
+            text-align: center
+            width: inherit
             height: 100%
-            width: 20em
-            .title , .subtitle
-                position: absolute
-                margin: 0
             .title
-                bottom: -2px
-                @media only screen and (min-width: 1140px)
-                    bottom: -3px
+                margin: .8em 0 0 0
+                float: none
             .subtitle
-                bottom: 1.91em
-                left: 5.6em
-                @media only screen and (min-width: 480px)
-                    bottom: 2.1em;
-                    left: 6.2em;
-                @media only screen and (min-width: 770px)
-                    bottom: 1.85em;
-                    left: 5.3em;
-                @media only screen and (min-width: 1140px)
-                    bottom: 1.92em;
-                    left: 5.6em;
+                margin: .1em 0 .8em 0
+                clear: left
 
 .main-container
     z-index: 1
