--- a/src/documents/index.html.jade
+++ b/src/documents/index.html.jade
@@ -26,8 +26,7 @@ article.mainpage
           article.post-content
             != post.contentRenderedWithoutLayouts
             h4.italic
-              a(href=post.url) See post
-              |  to view comments and related content
+              a(href=post.url) See post to view comments and related content
           if numPosts > 1
             h2.earlier-posts Earlier posts:
         else
