--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -190,7 +190,7 @@ footer.wrapper
     .post-image
         margin: 2em 2%        
     .post-content 
-        margin: 3em 2% 5em 2%       
+        margin: 3em 2% 5em 0       
     .post-image img
         width: 100%
     .post-body, .post-content 
