--- a/src/includes/about_aside.jade
+++ b/src/includes/about_aside.jade
@@ -4,11 +4,12 @@ aside.about
     img(src='/images/aksel_gresvig.jpg', alt="Aksel Gresvig")
   
   section.bio
-    p I'm Aksel and I make webapps. I have a serious addiction to technology, and I work at Accenture Norway where I take on roles such as frontend developer & architect for clients in the public and private sectors, as well as frontend evangelist & entrapeneur internally, to name a few.
-    p I am a generalist with too many hobbies. I love to live, and I live to learn.
+    p I work at Accenture Norway where I take on developer & architect roles for clients in the public and private sectors. 
+    p I'm the internal "frontend evangelist", and I'm endlessly fascinated by the possibilities new tech gives us. 
+    p.quote I love to live, and I live to learn.
+    .icon.icon-minus
   
   section.social-links    
-    h3 Connect with me
     ul
       li: a(target="_blank", href="https://twitter.com/agresvig", class="icon icon-twitter2", title="Twitter profile")
       li: a(target="_blank", href="https://github.com/AGresvig", class="icon icon-github5", title="GitHub profile")
