--- a/src/layouts/main.html.jade
+++ b/src/layouts/main.html.jade
@@ -26,10 +26,17 @@ layout: skeleton
 
 .footer-container
   footer.wrapper
-    h2.title
-      a(href='/') aksel gresvig
-    p Created with passion in Norway & Spain
-    a(href='https://www.twitter.com/agresvig', target='blank') @AGresvig
+    .info
+      h2.title
+        a(href='/') Aksel Gresvig
+      h5.subtitle Created with passion
+      .social-links  
+        ul
+          li: a(href="mailto:aksel@agresvig.com", class="icon icon-mail4", title="Email me!")
+          li: a(target="_blank", href="https://twitter.com/agresvig", class="icon icon-twitter", title="Twitter profile")
+          li: a(target="_blank", href="https://github.com/AGresvig", class="icon icon-github3", title="GitHub profile")
+          li: a(target="_blank", href="https://plus.google.com/u/0/+AkselGresvig?rel=author", class="icon icon-google-plus", title="Google Plus profile")
+          li: a(target="_blank", href="http://no.linkedin.com/in/akselgresvig", class="icon icon-linkedin", title="LinkedIn profile") 
 
-
+    p.techInfo Powered by Node.JS, created using DocPad, hosted on GitHub pages
 
