--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -20,7 +20,10 @@ $base2 = #eee8d5
 $orange = #cb4b16
 $cyan = #2aa198
 $lightGrey = #888
-
+$lighterGrey = #ccc
+$lightLightGrey = #f5f5f5
+$base2 = #eee8d5
+$base3 = #fdf6e3
 
 /* ===================
     IMPORTS
@@ -34,7 +37,9 @@ $lightGrey = #888
    =================== */
 //Textured background on whole page
 body.akselgresvig
-    background-image: url('/images/styling/debut_light.png')
+    // background-image: url('/images/styling/debut_light.png')
+    //background-color: $base3 
+    background: $lightLightGrey
 
 /*** some general icon styling ***/
 .iconwrapper *
