--- a/src/layouts/main.html.jade
+++ b/src/layouts/main.html.jade
@@ -33,10 +33,14 @@ layout: skeleton
       .social-links  
         ul
           li: a(href="mailto:aksel@agresvig.com", class="icon icon-mail4", title="Email me!")
-          li: a(target="_blank", href="https://twitter.com/agresvig", class="icon icon-twitter", title="Twitter profile")
+          li: a(target="_blank", href="https://twitter.com/agresvig", class="icon icon-twitter3", title="Twitter profile")
           li: a(target="_blank", href="https://github.com/AGresvig", class="icon icon-github3", title="GitHub profile")
-          li: a(target="_blank", href="https://plus.google.com/u/0/+AkselGresvig?rel=author", class="icon icon-google-plus", title="Google Plus profile")
-          li: a(target="_blank", href="http://no.linkedin.com/in/akselgresvig", class="icon icon-linkedin", title="LinkedIn profile") 
+          li: a(target="_blank", href="https://plus.google.com/u/0/+AkselGresvig?rel=author", class="icon icon-google-plus4", title="Google Plus profile")
 
-    p.techInfo Powered by Node.JS, created using DocPad, hosted on GitHub pages
+    p.techInfo Powered by 
+      a(target="_blank", href="http://nodejs.org/") Node.JS
+      , created using 
+      a(target="_blank", href="http://docpad.org/") DocPad
+      , hosted on 
+      a(target="_blank", href="http://pages.github.com/") GitHub pages
 
