More color tweaking. Using Stylys mixins to define shade of grey now

--- a/src/documents/styles/fonts.css.styl
+++ b/src/documents/styles/fonts.css.styl
@@ -115,6 +115,7 @@ a
     .bio
         text-align: center
         color: $mediumGrey
+        word-spacing: .1em
         .quote
           font-style: italic
     .social-links
@@ -147,6 +148,7 @@ a
               color: $lightGrey
     .techInfo
         color: $lighterGrey
+        text-transform: lowercase
         font-variant: small-caps
         letter-spacing: .15em
 
