Icon color change

--- a/src/documents/styles/fonts.css.styl
+++ b/src/documents/styles/fonts.css.styl
@@ -144,6 +144,7 @@ a
       .social-links
           .icon
               font-size: 1.5em
+              color: $lighterGrey
           .icon:hover
               color: $lightGrey
     .techInfo
