--- a/src/documents/styles/fonts.css.styl
+++ b/src/documents/styles/fonts.css.styl
@@ -11,74 +11,99 @@ $lighterGrey = #ccc
 $cyan = #2aa198
 $base02 = #073642
 
-/*
-* I use Google Web Fonts.
-* PT Serif for bodytext, Oswald for logo/title og headings
-*/
+/** 
+* Grilli Type 'GT Walsheim' for logo/title and headings
+* Proprietary, licensed fonts. Do not use without license! 
+* http://www.grillitype.com/information/webfonts-license
+*
 @font-face {
-  font-family: 'PT Serif';
-  font-style: normal;
-  font-weight: 400;
-  src: local('PT Serif'), local('PTSerif-Regular'), url(http://themes.googleusercontent.com/static/fonts/ptserif/v5/sDRi4fY9bOiJUbgq53yZCXYhjbSpvc47ee6xR_80Hnw.woff) format('woff');
-}
-@font-face {
-  font-family: 'PT Serif';
-  font-style: normal;
-  font-weight: 700;
-  src: local('PT Serif Bold'), local('PTSerif-Bold'), url(http://themes.googleusercontent.com/static/fonts/ptserif/v5/QABk9IxT-LFTJ_dQzv7xpLrIa-7acMAeDBVuclsi6Gc.woff) format('woff');
-}
-@font-face {
-  font-family: 'PT Serif';
-  font-style: italic;
-  font-weight: 400;
-  src: local('PT Serif Italic'), local('PTSerif-Italic'), url(http://themes.googleusercontent.com/static/fonts/ptserif/v5/03aPdn7fFF3H6ngCgAlQzL3hpw3pgy2gAi-Ip7WPMi0.woff) format('woff');
-}
-@font-face {
-  font-family: 'Oswald';
-  font-style: normal;
-  font-weight: 100;
-  src: local('Oswald Light'), local('Oswald-Light'), url(http://themes.googleusercontent.com/static/fonts/oswald/v7/HqHm7BVC_nzzTui2lzQTDbO3LdcAZYWl9Si6vvxL-qU.woff) format('woff');
-}
-@font-face {
-  font-family: 'Oswald';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Oswald Regular'), local('Oswald-Regular'), url(http://themes.googleusercontent.com/static/fonts/oswald/v7/qpy-UiLNKP-VfOdbcs6r6-vvDin1pK8aKteLpeZ5c0A.woff) format('woff');
-}
-@font-face {
-  font-family: 'GT Walsheim';
-  src: url("/fonts/GT_Walsheim/GT-Walsheim-Regular-Trial.otf") format("opentype");
-}
-@font-face {
-  font-family: 'GT Walsheim';
-  font-style: normal;
-  font-weight: 400;
-  src: url("/fonts/GT_Walsheim/GT-Walsheim-Regular-Trial.otf") format("opentype");
-}
-@font-face {
-  font-family: 'GT Walsheim';
-  font-style: normal;
-  font-weight: 400;
-  src: url("/fonts/GT_Walsheim/GT-Walsheim-Regular-Trial.otf") format("opentype");
-}
-@font-face {
-  font-family: 'GT Walsheim';
-  font-style: normal;
-  font-weight: 600;
-  src: url("/fonts/GT_Walsheim/GT-Walsheim-Medium-Trial.otf") format("opentype");
-}
-@font-face {
-  font-family: 'GT Walsheim';
-  font-style: normal;
-  font-weight: 700;
-  src: url("/fonts/GT_Walsheim/GT-Walsheim-Bold-Trial.otf") format("opentype");
-}
-/** Usage
-font-family: 'PT Sans', sans-serif;
-font-family: 'PT Serif', serif;
-font-family: 'Oswald', sans-serif;
-font-family: 'Lato', sans-serif;
+  font-family: 'MyWebFont';
+  src: url('webfont.eot'); /* IE9 Compat Modes /
+  src: url('webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 /
+       url('webfont.woff') format('woff'), /* Modern Browsers /
+       url('webfont.ttf')  format('truetype'), /* Safari, Android, iOS /
+       url('webfont.svg#svgFontName') format('svg'); /* Legacy iOS /
+  }
 **/
+
+/* GT Walsheim Web Medium */
+@font-face {
+    font-family: 'GT Walsheim';
+    src: url('/fonts/GT_Walsheim/gt-walsheim-medium-web.eot');
+    src: url('/fonts/GT_Walsheim/gt-walsheim-medium-web.eot?#iefix') format('embedded-opentype'),
+         url('/fonts/GT_Walsheim/gt-walsheim-medium-web.woff') format('woff'),
+         url('/fonts/GT_Walsheim/gt-walsheim-medium-web.ttf') format('truetype'),
+         url('/fonts/GT_Walsheim/gt-walsheim-medium-web.svg#gt_walsheim_medium') format('svg');
+    font-weight: normal;
+    font-style: bold;
+}
+@font-face {
+    font-family: 'GT Walsheim';
+    src: url('/fonts/GT_Walsheim/gt-walsheim-medium-oblique-web.eot');
+    src: url('/fonts/GT_Walsheim/gt-walsheim-medium-oblique-web.eot?#iefix') format('embedded-opentype'),
+         url('/fonts/GT_Walsheim/gt-walsheim-medium-oblique-web.woff') format('woff'),
+         url('/fonts/GT_Walsheim/gt-walsheim-medium-oblique-web.ttf') format('truetype'),
+         url('/fonts/GT_Walsheim/gt-walsheim-medium-oblique-web.svg#gt_walsheim_medium_oblique') format('svg');
+    font-weight: bold;
+    font-style: italic;
+}
+
+/* GT Walsheim Web Regular */
+@font-face {
+    font-family: 'GT Walsheim';
+    src: url('/fonts/GT_Walsheim/gt-walsheim-web.eot');
+    src: url('/fonts/GT_Walsheim/gt-walsheim-web.eot?#iefix') format('embedded-opentype'),
+         url('/fonts/GT_Walsheim/gt-walsheim-web.woff') format('woff'),
+         url('/fonts/GT_Walsheim/gt-walsheim-web.ttf') format('truetype'),
+         url('/fonts/GT_Walsheim/gt-walsheim-web.svg#gt_walsheim_regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'GT Walsheim';
+    src: url('/fonts/GT_Walsheim/gt-walsheim-regular-oblique-web.eot');
+    src: url('/fonts/GT_Walsheim/gt-walsheim-regular-oblique-web.eot?#iefix') format('embedded-opentype'),
+         url('/fonts/GT_Walsheim/gt-walsheim-regular-oblique-web.woff') format('woff'),
+         url('/fonts/GT_Walsheim/gt-walsheim-regular-oblique-web.ttf') format('truetype'),
+         url('/fonts/GT_Walsheim/gt-walsheim-regular-oblique-web.svg#gt_walsheim_regular_oblique') format('svg');
+    font-weight: normal;
+    font-style: italic;
+}
+
+/**
+* Google Web Fonts
+* PT Serif for bodytext
+**/
+@font-face {
+  font-family: 'PT Serif';
+  src: url('/fonts/PT_Serif/pt_serif-regular.eot');
+  src: url('/fonts/PT_Serif/pt_serif-regular.eot?#iefix') format('embedded-opentype'),
+       url('/fonts/PT_Serif/pt_serif-regular.woff') format('woff'),
+       url('/fonts/PT_Serif/pt_serif-regular.ttf')  format('truetype'),
+       url('/fonts/PT_Serif/pt_serif-regular.svg#svgFontName') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'PT Serif';
+  src: url('/fonts/PT_Serif/pt_serif-bold.eot');
+  src: url('/fonts/PT_Serif/pt_serif-bold.eot?#iefix') format('embedded-opentype'),
+       url('/fonts/PT_Serif/pt_serif-bold.woff') format('woff'),
+       url('/fonts/PT_Serif/pt_serif-bold.ttf')  format('truetype'),
+       url('/fonts/PT_Serif/pt_serif-bold.svg#svgFontName') format('svg');
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'PT Serif';
+  src: url('/fonts/PT_Serif/pt_serif-italic.eot');
+  src: url('/fonts/PT_Serif/pt_serif-italic.eot?#iefix') format('embedded-opentype'),
+       url('/fonts/PT_Serif/pt_serif-italic.woff') format('woff'),
+       url('/fonts/PT_Serif/pt_serif-italic.ttf')  format('truetype'),
+       url('/fonts/PT_Serif/pt_serif-italic.svg#svgFontName') format('svg');
+  font-weight: normal;
+  font-style: italic;
+}
 
 
 /* ===================
@@ -91,7 +116,7 @@ body
 
 h1, h2, h3, h4, h5, h6
     font-family: 'GT Walsheim', sans-serif !important
-    font-weight: 400
+    font-weight: normal
     color: $headerText
     text-transform: capitalize
     line-height: 1em
@@ -176,7 +201,7 @@ blockquote
 /*** Logo/Title ***/
 .title
     font-family: 'GT Walsheim', sans-serif
-    font-weight: 600
+    font-weight: bold
     a
         color: $cyan
     text-transform: capitalize
@@ -212,9 +237,9 @@ blockquote
 .latest.post-item,
 .blogpost
     .post-title
-        font-weight: 600
+        font-weight: bold
         font-size: 2.5em
-        color: $base01
+        color: $headerText
         line-height: 1em
     footer.related
         h3
