--- a/src/includes/about_aside.jade
+++ b/src/includes/about_aside.jade
@@ -6,7 +6,7 @@ aside.about
   section.bio
     p I work at Accenture Norway where I take on developer & architect roles for clients in the public and private sectors. 
     p I'm the internal "frontend evangelist", and I'm endlessly fascinated by the possibilities new tech gives us. 
-    p.quote Webapp All The Things!
+    //- p.quote Webapp All The Things!
     h3 -
   
   section.social-links    
