--- a/src/documents/index.html.jade
+++ b/src/documents/index.html.jade
@@ -16,12 +16,15 @@ article.mainpage
           a(href=post.url)= post.title
         else
           != post.title
+      if post.subtitle
+        h2.post-subtitle= post.subtitle
       .post-metadata.subtle-text
         include ../includes/post-metadata
     
       .post-body
         if latestPost
-          p.post-summary= post.summary
+          .post-summary
+            t(render="markdown")= post.summary
         .post-image
           a(href=post.url)
             img(src='/images/posts/'+post.image, alt='Post image')
