Styling improvements to full blogposts

--- a/src/documents/styles/fonts.css.styl
+++ b/src/documents/styles/fonts.css.styl
@@ -120,6 +120,7 @@ h1, h2, h3, h4, h5, h6
     color: $headerText
     text-transform: capitalize
     line-height: 1em
+    margin-top: 2em
 
 a
     color: #2aa198
@@ -230,6 +231,7 @@ blockquote
 .post-summary
     font-style: italic
     font-size: 1.2em
+    line-height: 1.6em
 
 .post-metadata.bolded li
     text-transform: uppercase
