--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -217,7 +217,7 @@ blockquote
                 position: absolute
                 left: -100%
 
-         .post-content              
+         .post-summary              
             float: left
             width: 65%
             margin-bottom: 1em
@@ -359,12 +359,12 @@ html, body
 
 .footer-container, 
 .push
-    height: 13em
+    height: 15em
     clear: both
     @media only screen and (max-width: 770px)
         //The footer text takes up two lines at this res so we
         //need more spacing to push the footer down
-        height: 14.5em
+        height: 16.5em
 
 /* ============= End Footer ================*/
  
