--- a/src/layouts/main.html.jade
+++ b/src/layouts/main.html.jade
@@ -37,10 +37,11 @@ layout: skeleton
           li: a(target="_blank", href="https://github.com/AGresvig", class="icon icon-github3", title="GitHub profile")
           li: a(target="_blank", href="https://plus.google.com/u/0/+AkselGresvig?rel=author", class="icon icon-google-plus4", title="Google Plus profile")
 
-    p.techInfo Powered by 
-      a(target="_blank", href="http://nodejs.org/") Node.JS
-      , created using 
-      a(target="_blank", href="http://docpad.org/") DocPad
-      , hosted on 
-      a(target="_blank", href="http://pages.github.com/") GitHub pages
+    .techInfo
+      p Powered by 
+        a(target="_blank", href="http://nodejs.org/") Node.JS
+        , created using 
+        a(target="_blank", href="http://docpad.org/") DocPad
+        , hosted on 
+        a(target="_blank", href="http://pages.github.com/") GitHub pages
 
