--- a/src/includes/about_aside.jade
+++ b/src/includes/about_aside.jade
@@ -4,8 +4,9 @@ aside.about
     img(src='/images/aksel_gresvig.jpg', alt="Aksel Gresvig")
   
   section.bio
-    p I work at Accenture Norway where I take on developer & architect roles for clients in the public and private sectors. 
-    p I'm the internal "frontend evangelist", and I'm endlessly fascinated by the possibilities new tech gives us. 
+    p Developer, architect, frontend evangelist, intrapreneur and life-long technophile.
+    p I work at Accenture Norway where I help clients in many industries reach new potential leveraging the latest advancements in software.
+    p I'm endlessly fascinated by the possibilities new tech gives us. 
     //- p.quote Webapp All The Things!
     h3 -
   
