--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -158,7 +158,7 @@ blockquote
     position: relative
 
     .post-title
-        margin-bottom: .25em
+        margin: 1em 0 .25em 0
     .post-subtitle
         margin: 0
     
