Updated bio link. New ga code

--- a/src/includes/about_aside.jade
+++ b/src/includes/about_aside.jade
@@ -5,7 +5,10 @@ aside.about
   
   section.bio
     p Developer, architect, frontend evangelist, intrapreneur and life-long technophile.
-    p I work at Accenture Norway where I help clients in many industries reach new potential leveraging the latest advancements in software.
+    p 
+      | I work at 
+      a(href="http://www.accenture.com/no-en/Pages/index.aspx" target="_blank") Accenture 
+      | in Norway where I help clients in many industries reach new potential leveraging the latest advancements in software.
     p I'm endlessly fascinated by the possibilities new tech gives us. 
     //- p.quote Webapp All The Things!
     h3 -
