Adding post on Fluent 2014

--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -119,7 +119,7 @@ body.akselgresvig
 
 //Blockquotes yo
 blockquote
-  margin: 2em 0
+  margin: 2em 0 0 0
   padding: 0 2em
   border-left: 1px solid $lightGrey
 
