--- a/src/documents/index.html.jade
+++ b/src/documents/index.html.jade
@@ -61,5 +61,6 @@ article.mainpage
             a(href=oldPost.url)= oldPost.title 
             |  on 
             != oldPost.date.toDateString()
-
+  include ../includes/disclaimer
+  
 include ../includes/about_aside
