--- a/src/documents/index.html.jade
+++ b/src/documents/index.html.jade
@@ -29,23 +29,23 @@ article.mainpage
           a(href=post.url) See post to view comments and related content
       if numPosts > 1
         h2.earlier-posts Earlier posts:
-      
+
     hr.divider
 
   //- List out formatted sections for 4 latest previous posts
   each post, index in posts.slice(1,4)
     .previous.post-item
-      h1.post-title
-        a(href=post.url)= post.title
-      if post.subtitle
-        h2.post-subtitle= post.subtitle
-      .post-metadata.subtle-text
-        include ../includes/post-metadata
-    
+      .post-image
+        a(href=post.url)
+          img(src=getThumbnail('/images/posts/'+post.image, { w: 250, h: 200, q: 90 }), alt='Post image')
+
       .post-body
-        .post-image
-          a(href=post.url)
-            //img(src=getThumbnail('/images/posts/'+post.image, { w: 100, h: 100 }), alt='Post image')
+        h1.post-title
+          a(href=post.url)= post.title
+        if post.subtitle
+          h2.post-subtitle= post.subtitle
+        .post-metadata.subtle-text
+          include ../includes/post-metadata
         .post-summary
           t(render="markdown")= post.summary
 
@@ -62,5 +62,5 @@ article.mainpage
             |  on 
             != oldPost.date.toDateString()
   include ../includes/disclaimer
-  
+
 include ../includes/about_aside
