--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -39,7 +39,7 @@ $base3 = #fdf6e3
 //Textured background on whole page
 body.akselgresvig
     // background-image: url('/images/styling/debut_light.png')
-    //background-color: $base3 
+    //background-color: $base3
     background: $lightLightGrey
 
 /*** some general icon styling ***/
@@ -62,7 +62,7 @@ body.akselgresvig
     box-shadow: none
     z-index: 100
 
-    header 
+    header
         min-height:4em
         border-bottom: 2px solid $cyan
 
@@ -85,19 +85,20 @@ body.akselgresvig
 
 .main-container
     z-index: 1
-    
+
     .main article
         //Dont want sentences longer than max 90 chars
-        max-width: 650px 
+        max-width: 650px
 
     .main aside
+        margin-top: 3em;
         @media only screen and (min-width: 769px)
             width: 28%
             padding: 0 0 10px 0
             margin-top: 5em;
         @media only screen and (min-width: 1140px)
             width: 30%
-        
+
 /** General containers **/
 .container
     max-width: 380px;
@@ -129,12 +130,12 @@ blockquote
 /* ===================
     Index page & blogpost page
    =================== */
-.post-metadata 
+.post-metadata
     line-height: 1.2em
     margin: 1em 0
     *
         margin: 0 .1em
-        display: inline-block 
+        display: inline-block
     ul
         margin: 0
         padding: 0
@@ -149,9 +150,6 @@ blockquote
         //but I dont want to show it - there is only one author on this page..
         display: none
 
-.previous.post-item .post-metadata 
-    width: 65%
-
 .post-item,
 .blogpost
     margin-bottom: 4em
@@ -161,11 +159,11 @@ blockquote
         margin: 1em 0 .25em 0
     .post-subtitle
         margin: 0
-    
-    .post-body 
+
+    .post-body
         margin-top: 0
         display: block
-    .divider 
+    .divider
         clear: both
 
     .earlier-posts
@@ -174,19 +172,19 @@ blockquote
     footer.related
         ul
             margin: 0
-    
+
 .content .latest.post-item,
 .content .blogpost
     .post-image
         margin: 2em 2%
         text-align: center
-    .post-content 
-        margin: 3em 2% 5em 0       
+    .post-content
+        margin: 3em 2% 5em 0
     .post-image img
-        max-width: 95%        
-        max-height: 500px        
+        max-width: 95%
+        max-height: 500px
         height: auto
-    .post-body, .post-content 
+    .post-body, .post-content
         float: none
         width: initial
     .divider
@@ -194,36 +192,41 @@ blockquote
     iframe
         margin: 5%
         max-width: 95%
-        
-.mainpage .previous.post-item 
+
+.mainpage .previous.post-item
     @media only screen and (min-width: 770px)
         margin-right: -45% //We're making it span on the bigger screens
 
-.previous.post-item     
-    .post-title
-        width: 65%
-    .post-body 
-        min-height: 5em;      
-        .post-image
-            opacity: .6
-            float: right 
-            width: 30%
-            height: 100%
-            overflow: hidden
-            position: absolute
-            bottom: 0.5em
-            right: 0
-            img //this is to try to center the pic. should probably create thumbs instead..
-                position: absolute
-                left: -100%
-
-         .post-summary              
-            float: left
-            width: 65%
+.previous.post-item
+    .post-body
+        min-height: 5em;
+        .post-summary
             margin-bottom: 1em
             overflow: hidden
+    .post-image
+        width: 100%
+        img
+            box-shadow: -4px 5px 6px $lighterGrey;
 
-        
+        @media only screen and (max-width: 480px)
+            text-align: center; //Center picture on smaller screens
+
+    @media only screen and (min-width: 550px)
+        .post-body
+            //Side-by-side post text and image on larger screens (stacked on smaller)
+            .post-title
+                width: 65%
+            .post-summary
+                width: 65%
+                float: left
+            .post-metadata
+                width: 65%
+        .post-image
+            float: right;
+            width: 30%
+            img
+                width: 100%
+
 /* ============= End Index & blogpost page ==============*/
 
 /* ===================
@@ -248,8 +251,8 @@ aside.about
 
         &:hover
             border-color: $cyan
-  
-//Inline list of social icons  
+
+//Inline list of social icons
 .social-links
     text-align: center
     ul
@@ -258,26 +261,26 @@ aside.about
             display: inline-block
             .icon
                 padding-right: .3em
-                
-    
+
+
 //An attempt to override styles on the AddThis widget, its a little too attention-grabbing
-.akselgresvig 
+.akselgresvig
     #at4-share
         opacity: 0.4
 
-        .at4-share-btn 
+        .at4-share-btn
             background: rgb(232, 232, 232) !important
 
     #at4-share:hover
         opacity: 1
-        
+
 
 /* ============= End Sidebar ==============*/
 
 /* ===================
     Comments
    =================== */
-.content footer#comments 
+.content footer#comments
     display: block;
     width: 100%;
     float: left;
@@ -286,10 +289,10 @@ aside.about
 /* ============= End Comments ==============*/
 
 /* ===================
-    Navigation 
+    Navigation
    =================== */
 header
-    nav.nav-collapse 
+    nav.nav-collapse
         li a, li a:visited
             color: $lightGrey
             font-size: 1.2em
@@ -297,7 +300,7 @@ header
         li.active a, a:hover, a:active
             color: $orange
             text-decoration: underline
-    
+
     nav.nav-collapse.closed
         a
             background: none
@@ -352,10 +355,9 @@ html, body
     height: 100%;
     margin: 0 auto -13em;
 
-.footer-container, 
+.footer-container,
 .push
     height: 15em
     clear: both
 
 /* ============= End Footer ================*/
- 
