--- a/src/documents/styles/fonts.css.styl
+++ b/src/documents/styles/fonts.css.styl
@@ -240,9 +240,10 @@ blockquote
 .blogpost
     .post-title
         font-weight: bold
-        font-size: 2.5em
         color: $headerText
         line-height: 1em
+        @media only screen and (min-width: 480px)
+            font-size: 2.5em
     footer.related
         h3
             color: $headerText
