--- a/src/includes/about_aside.jade
+++ b/src/includes/about_aside.jade
@@ -4,11 +4,13 @@ aside.about
     img(src='/images/aksel_gresvig.jpg', alt="Aksel Gresvig")
   
   section.bio
-    p Developer, architect, frontend evangelist, intrapreneur and life-long technophile.
+    p Developer, architect, JS evangelist, intrapreneur and life-long technophile.
     p 
       | I work at 
       a(href="http://www.accenture.com/no-en/Pages/index.aspx" target="_blank") Accenture 
-      | in Norway where I help clients in many industries reach new potential leveraging the latest advancements in software.
+      | in 
+      a(href="https://www.google.no/maps/@59.9046669,10.7573027,13z" target="_blank") Oslo 
+      | where I help clients in many industries reach new potential leveraging the latest advancements in software.
     p I'm endlessly fascinated by the possibilities new tech gives us. 
     //- p.quote Webapp All The Things!
     h3 -
